syntax = "proto3";

option go_package = "../pb;pb";
import "user.proto";
// 这里有多个--proto_path是因为当前proto文件中有import别的proto文件，在构建的时候这些proto文件要从--proto_path指定的多个路径去找，
// 一个没找到就回去从另一个招
// protoc --proto_path=../../../user/proto/ --proto_path=. --go_out=. ./*.proto

// 发布评论请求
message CommentActionReq {
  int64 user_id = 1;
  int64 video_id = 2;
  int64 comment_id = 3;
  string comment_text = 4;
  int64 action_type = 5;
}

message CommentActionRsp {
    Comment comment = 1;
}

message Comment {
  int64 id = 1; // 视频评论id​
  UserInfo user_info = 2; // 评论用户信息​
  string content = 3; // 评论内容
  string create_date = 4; // 评论发布日期，格式 mm-dd​
}

message GetCommentListReq {
  int64 video_id = 1;
}


message GetCommentListRsp {
  repeated Comment comment_list = 1; // 评论列表​
}


service CommentService {
  rpc CommentAction(CommentActionReq) returns (CommentActionRsp); // 发布评论方法
  rpc GetCommentList(GetCommentListReq) returns (GetCommentListRsp);
}







